[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/Graphics/icons/with_Background/65.png" type="Texture" id=1]
[ext_resource path="res://assets/Graphics/icons/with_Background/68.png" type="Texture" id=2]
[ext_resource path="res://assets/Graphics/icons/with_Background/74.png" type="Texture" id=3]
[ext_resource path="res://assets/Graphics/icons/with_Background/75.png" type="Texture" id=4]
[ext_resource path="res://assets/Graphics/icons/with_Background/11.png" type="Texture" id=5]
[ext_resource path="res://scripts/scenes/game/studio_manager/studio_manager.gd" type="Script" id=6]
[ext_resource path="res://assets/Graphics/icons/with_Background/96.png" type="Texture" id=7]
[ext_resource path="res://assets/Graphics/icons/with_Background/100.png" type="Texture" id=8]
[ext_resource path="res://assets/Graphics/icons/with_Background/60.png" type="Texture" id=9]
[ext_resource path="res://scenes/game/studio_manager/menus/ComputerMenu.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/game/studio_manager/menus/WorkersManagementMenu.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/game/studio_manager/menus/EmailMenu.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/game/studio_manager/menus/PartyRatingsMenu.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/game/studio_manager/menus/ShopMenu.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/game/studio_manager/menus/SettingsMenu.tscn" type="PackedScene" id=15]
[ext_resource path="res://scenes/game/studio_manager/menus/DataMenu.tscn" type="PackedScene" id=16]
[ext_resource path="res://assets/Graphics/badge-11-3.png" type="Texture" id=17]
[ext_resource path="res://scenes/game/studio_manager/menus/NewNameMenu.tscn" type="PackedScene" id=18]

[node name="Manager" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="menus" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="ComputerMenu" parent="menus" instance=ExtResource( 10 )]

[node name="DataMenu" parent="menus" instance=ExtResource( 16 )]

[node name="EmailMenu" parent="menus" instance=ExtResource( 12 )]
margin_right = 599.0
margin_bottom = 474.0
indicator = NodePath("../../menu/EmailMenu/UnReadEmailIndicator")

[node name="PartyRatingsMenu" parent="menus" instance=ExtResource( 13 )]

[node name="SettingsMenu" parent="menus" instance=ExtResource( 15 )]
visible = false

[node name="ShopMenu" parent="menus" instance=ExtResource( 14 )]

[node name="LookUpForWorkersMenu" parent="menus" instance=ExtResource( 11 )]

[node name="NewNameMenu" parent="menus" instance=ExtResource( 18 )]

[node name="menu" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 32.0
margin_bottom = 284.0

[node name="SettingMenu" type="TextureButton" parent="menu"]
visible = false
margin_right = 32.0
margin_bottom = 32.0
texture_normal = ExtResource( 5 )

[node name="PartyRatingsMenu" type="TextureButton" parent="menu"]
margin_right = 32.0
margin_bottom = 32.0
texture_normal = ExtResource( 9 )

[node name="ShopMenu" type="TextureButton" parent="menu"]
margin_top = 36.0
margin_right = 32.0
margin_bottom = 68.0
texture_normal = ExtResource( 1 )

[node name="ComputerMenu" type="TextureButton" parent="menu"]
margin_top = 72.0
margin_right = 32.0
margin_bottom = 104.0
texture_normal = ExtResource( 2 )

[node name="EmailMenu" type="TextureButton" parent="menu"]
margin_top = 108.0
margin_right = 32.0
margin_bottom = 140.0
texture_normal = ExtResource( 3 )

[node name="UnReadEmailIndicator" type="TextureRect" parent="menu/EmailMenu"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -16.0
margin_bottom = 16.0
texture = ExtResource( 17 )
expand = true

[node name="WorkersManagementMenu" type="TextureButton" parent="menu"]
visible = false
margin_top = 144.0
margin_right = 32.0
margin_bottom = 176.0
texture_normal = ExtResource( 4 )

[node name="DataMenu" type="TextureButton" parent="menu"]
margin_top = 144.0
margin_right = 32.0
margin_bottom = 176.0
texture_normal = ExtResource( 7 )

[node name="SaveButton" type="TextureButton" parent="menu"]
margin_top = 180.0
margin_right = 32.0
margin_bottom = 212.0
texture_normal = ExtResource( 8 )

[connection signal="pressed" from="menu/SettingMenu" to="." method="_on_SettingMenu_pressed"]
[connection signal="pressed" from="menu/PartyRatingsMenu" to="." method="_on_PartyRatingsMenu_pressed"]
[connection signal="pressed" from="menu/ShopMenu" to="." method="_on_ShopMenu_pressed"]
[connection signal="pressed" from="menu/ComputerMenu" to="." method="_on_ComputerMenu_pressed"]
[connection signal="pressed" from="menu/EmailMenu" to="." method="_on_EmailMenu_pressed"]
[connection signal="pressed" from="menu/WorkersManagementMenu" to="." method="_on_LookUpForWorkersMenu_pressed"]
[connection signal="pressed" from="menu/DataMenu" to="." method="_on_DataMenu_pressed"]
[connection signal="pressed" from="menu/SaveButton" to="." method="_on_SaveButton_pressed"]
